--- a/blocks/github.prime-optimal.video.html
+++ b/blocks/github.prime-optimal.video.html
@@ -1,19 +1,15 @@
-{{/* Wowchemy Blocks: Markdown */}}
-{{/* Documentation: https://wowchemy.com/blocks/ */}}
-{{/* License: https://github.com/wowchemy/wowchemy-hugo-themes/blob/main/LICENSE.md */}}
+{{/* My Custom Block */}}
 
-{{/* Initialise */}}
+{{/* Get variables */}}
 {{ $page := .wcPage }}
 {{ $block := .wcBlock }}
-{{ $columns := $block.design.columns | default "1" }}
-{{ $text := $block.content.text | emojify | $page.RenderString }}
 
-{{ if ne $columns "1" }}
-  <div class="col-12 col-lg-8">
-    {{ $text }}
-  </div>
-{{ else }}
-  <div class="col-12">
-    {{ $text }}
-  </div>
-{{ end }}
+{{/* Add your block layout below */}}
+{{/* Styles can be added to the SCSS file */}}
+{{/* Access custom front matter options via $block.Params  */}}
+{{/* E.g. mytext via $block.Params.mytext */}}
+
+<h2>{{$block.Title}}</h2>
+
+<p>{{$block.Content}}</p>
+<p>{{$block.Weight}}</p>
